[package]
name = "tiny-ptz"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27"
ratatui = "0.27" # The new name for tui-rs
anyhow = "1.0" # For simplified error handling across modules
serde = { version = "1.0", features = ["derive"] } # For config file serialization/deserialization
toml = "0.8" # For TOML config file
tokio = { version = "1.38.0", features = ["full"] } # Added tokio with "full" features